--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dobro dosli</title>
+        <title>Dashboard</title>
     </head>
     <body>
-        <h2>Dodavanje opreme</h2>
-        <a href="{{url_for('equipment_bp.dodaj_opremu')}}"><button>Dodaj opremu</button></a>
+        <h1>Dobro došli {{username | upper}}</h1>
+        {%if role == 'admin' or role == 'laborant'%}
+            <a href="{{url_for('equipment_bp.dodaj_opremu')}}"><button>Dodaj opremu</button></a> <br>
+        {% endif %}
+        <a href="{{url_for('login_bp.logout')}}"><button>Log out</button></a>
     </body>
 </html>
