add equipment with .csv file

--- a/App/templates/dodavanje_opreme.html
+++ b/App/templates/dodavanje_opreme.html
@@ -4,11 +4,17 @@
 
     </head>
     <body>
+        <h1>Unesi podatke o opremi:</h1>
         <form method="POST">
             {{ form.hidden_tag() }}
             <p>{{ form.naziv.label }}{{ form.naziv(size=30) }}</p>
             <p>{{ form.kolicina.label }}{{ form.kolicina() }}</p>
             <p>{{ form.submit() }}</p>
+        </form>
+        <h1>Dodaj opremu preko CSV-a</h1>
+        <form method="POST" enctype="multipart/form-data">
+            <input type="file" name="file" accept=".csv" required>
+            <button type="submit">Dodaj</button>
         </form>
     </body>
 </html>
