Zavrsene osnovne funkcionalnosti za browse, pripremiti za merge bit ce dosta konflikta sa dodavanjem opreme

--- a/App/templates/dodavanje_opreme.html
+++ b/App/templates/dodavanje_opreme.html
@@ -8,6 +8,7 @@
             {{ form.hidden_tag() }}
             <p>{{ form.naziv.label }}{{ form.naziv(size=30) }}</p>
             <p>{{ form.kolicina.label }}{{ form.kolicina() }}</p>
+            <p>{{ form.kategorija.label }}{{ form.kategorija() }}</p>
             <p>{{ form.submit() }}</p>
         </form>
     </body>
