--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -8,6 +8,7 @@
         {%if role == 'admin' or role == 'laborant'%}
             <a href="{{url_for('equipment_bp.dodaj_opremu')}}"><button>Dodaj opremu</button></a> <br>
         {% endif %}
+        <a href="{{url_for('equipment_bp.pregledaj_opremu')}}"><button>Pretraži opremu</button></a><br>
         <a href="{{url_for('login_bp.logout')}}"><button>Log out</button></a>
     </body>
 </html>
