added new column 'kategorija'

--- a/App/templates/dodavanje_opreme.html
+++ b/App/templates/dodavanje_opreme.html
@@ -4,11 +4,13 @@
 
     </head>
     <body>
+        <a href="{{url_for('equipment_bp.back_to_dashboard')}}"><button>Vrati se na dashboard</button></a>
         <h1>Unesi podatke o opremi:</h1>
         <form method="POST">
             {{ form.hidden_tag() }}
             <p>{{ form.naziv.label }}{{ form.naziv(size=30) }}</p>
             <p>{{ form.kolicina.label }}{{ form.kolicina() }}</p>
+            <p>{{ form.kategorija.label }}{{ form.kategorija() }}</p>
             <p>{{ form.submit() }}</p>
         </form>
         <h1>Dodaj opremu preko CSV-a</h1>
