--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -119,6 +119,7 @@ p {
 .header-left {
   display: flex;
   align-items: center;
+  gap: 15px;
 }
 
 .header-logo {
@@ -128,6 +129,17 @@ p {
 
 .site-name {
   font-size: 20px;
+  font-weight: 600;
+}
+
+.dashboard-button {
+  margin-left: 20px;  
+  background-color: #000000;
+  color: white;
+  padding: 6px 12px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: 500;
 }
 
 .header-right {
@@ -135,6 +147,15 @@ p {
   align-items: center;
   gap: 10px;
   position: relative;
+}
+
+.logout-button {
+  background-color: #dc3545;
+  color: white;
+  padding: 6px 12px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: 500;
 }
 
 .user-avatar {
@@ -186,8 +207,6 @@ p {
   display: block;
 }
 
-
-
 @media (max-width: 768px) {
   .container {
     flex-direction: column;
@@ -195,9 +214,9 @@ p {
     padding: 0;
   }
 
-    .site-name {
-      display: none;
-    }
+  .site-name {
+    display: none;
+  }
 
   .right-side {
     order: -1;
@@ -252,5 +271,10 @@ p {
 
   button[type="submit"] {
     width: 90%;
+  }
+
+  .dashboard-button, .logout-button {
+    padding: 6px 10px;
+    font-size: 14px;
   }
 }
