Prije commita sa add_equipment fe

--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -1,100 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Main Dashboard</title>
-  <link rel="stylesheet" href="../static/css/style.css" />
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}Dashboard{% endblock %}
+
+{% block content %}
   <header class="dashboard-header">
-    <img src="../static/images/background.jpg" alt="Building Banner" class="header-image" />
+    <img src="{{ url_for('static', filename='images/background.jpg') }}" alt="Building Banner" class="header-image" />
     <div class="header-text">
       <h1>MAIN DASHBOARD</h1>
-      <p>Create new inquiry, review available equipment <br/> and access the administration panel</p>
+      <!-- <p>Create new inquiry, review available equipment <br/> and access the administration panel</p> -->
     </div>
   </header>
 
   <div class="dashboard-content">
-    <a href="/new-inquiry" class="inquiry-card">
-      <img src="../static/images/plus.png" alt="New Inquiry Icon" />
+
+    {% if role == 'admin' or role == 'laborant' %}
+    <a href="{{ url_for('equipment_bp.dodaj_opremu') }}" class="inquiry-card">
+      <img src="{{ url_for('static', filename='images/plus.png') }}" alt="New Inquiry Icon" />
       <h2>NEW INQUIRY</h2>
     </a>
+    <a href="" class="card">
+        <img src="{{ url_for('static', filename='images/report.png') }}" alt="Currently Rented" />
+        <div>
+          <h3>CURRENTLY RENTED EQUIPMENT</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+        </div>
+      </a>
+      <a href="{{ url_for('equipment_bp.download_csv') }}" class="card">
+        <img src="{{ url_for('static', filename='images/report2.png') }}" alt="Quick Report" />
+        <div>
+          <h3>QUICK REPORT</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+        </div>
+      </a>
+
+
+    {% endif %}
 
     <div class="right-cards">
-    <a href="/available-assets" class="card">
-      <img src="../static/images/assets.png" alt="Available Assets" />
-      <div>
-        <h3>AVAILABLE ASSETS</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
-      </div>
-    </a>
-
-    <a href="/rented-equipment" class="card">
-      <img src="../static/images/report.png" alt="Currently Rented" />
-      <div>
-        <h3>CURRENTLY RENTED EQUIPMENT</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
-      </div>
-    </a>
-
-    <a href="/quick-report" class="card">
-      <img src="../static/images/report2.png" alt="Quick Report" />
-      <div>
-        <h3>QUICK REPORT</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
-      </div>
-    </a>
-</div>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Main Dashboard</title>
-  <link rel="stylesheet" href="../static/css/style.css" />
-</head>
-<body>
-  <header class="dashboard-header">
-    <img src="../static/images/background.jpg" alt="Building Banner" class="header-image" />
-    <div class="header-text">
-      <h1>MAIN DASHBOARD</h1>
-      <p>Create new inquiry, review available equipment <br/> and access the administration panel</p>
+      <a href="{{ url_for('equipment_bp.pregledaj_opremu') }}" class="card">
+        <img src="{{ url_for('static', filename='images/assets.png') }}" alt="Available Assets" />
+        <div>
+          <h3>AVAILABLE ASSETS</h3>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
+        </div>
+      </a>
     </div>
-  </header>
-
-  <div class="dashboard-content">
-    <a href="/new-inquiry" class="inquiry-card">
-      <img src="../static/images/plus.png" alt="New Inquiry Icon" />
-      <h2>NEW INQUIRY</h2>
-    </a>
-
-    <div class="right-cards">
-    <a href="/available-assets" class="card">
-      <img src="../static/images/assets.png" alt="Available Assets" />
-      <div>
-        <h3>AVAILABLE ASSETS</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
-      </div>
-    </a>
-
-    <a href="/rented-equipment" class="card">
-      <img src="../static/images/report.png" alt="Currently Rented" />
-      <div>
-        <h3>CURRENTLY RENTED EQUIPMENT</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
-      </div>
-    </a>
-
-    <a href="/quick-report" class="card">
-      <img src="../static/images/report2.png" alt="Quick Report" />
-      <div>
-        <h3>QUICK REPORT</h3>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry...</p>
-      </div>
-    </a>
-</div>
-</body>
-</html>
+  </div>
+{% endblock %}
