--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -224,27 +224,29 @@ body {
   object-fit: cover;
   width: 95%;
   border-radius: 20px;
+  filter: blur(8px);
 }
-
 .header-text {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   color: #222;
-  text-shadow: 0 1px 3px rgba(255,255,255,0.8);
+  text-shadow: 0 2px 4px rgba(0,0,0,0.6);
 }
 
 .header-text h1 {
   margin-top: 95px;
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: 700; /* Povećajte debljinu fonta */
 }
 
 .header-text p {
   font-size: 1rem;
   color: #444;
+  font-weight: 500;
 }
+
 
 .dashboard-content {
   display: grid;
