New register version, removing extra messages after logout

--- a/App/templates/base.html
+++ b/App/templates/base.html
@@ -26,6 +26,9 @@
         </a>
 
         <img src="https://i.pravatar.cc/40" alt="User" class="user-avatar" />
+        <!--<img src="{{ gravatar_url }}" alt="User" class="user-avatar" /> --> 
+        <!--Code for user image - from an email, see file login.py-->
+
         <span class="user-name">{{ session.get('user', 'Gost') }}</span>
       </div>
     </header>
