--- a/App/templates/login.html
+++ b/App/templates/login.html
@@ -16,8 +16,8 @@
       <form class="login-form" method="POST" action="{{ url_for('login_bp.login') }}">
         {{ form.hidden_tag() }}
 
-        <label for="username">Username</label>
-        {{ form.username(id='username', class_='input-field', placeholder='Enter your username') }}
+        <label for="email">Email</label>
+        {{ form.email(id='email', class_='input-field', placeholder='Enter your @fet.ba email') }}
 
         <div class="password-container">
           <label for="password">Password</label>
@@ -27,9 +27,12 @@
 
         <button type="submit">Login</button>
 
-        <p class="register-text">Don't have an account? <a href="register">Register</a></p>
+        <p class="register-text">Don't have an account? 
+          <a href="{{ url_for('login_bp.register') }}">Register</a>
+        </p>
       </form>
 
+      <!-- Flash poruke -->
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
           <ul class="flash-messages">
@@ -39,6 +42,7 @@
           </ul>
         {% endif %}
       {% endwith %}
+
     </div>
 
     <div class="right-side">
