--- a/App/static/css/add_eq.css
+++ b/App/static/css/add_eq.css
@@ -66,3 +66,8 @@ input[type="submit"] {
     font-size: 16px;
     text-shadow: 1px 1px 0 black, -1px 1px 0 black, 1px -1px 0 black, -1px -1px 0 black;
 }
+input[type="file"] {
+    border: none;
+    background-color: #f9f9f9;
+    cursor: pointer;
+}
