--- a/App/templates/dashboard.html
+++ b/App/templates/dashboard.html
@@ -34,7 +34,7 @@
       </a>
     {% endif %}
     <div class="right-cards">
-        <a href="{{ url_for('equipment_bp.pregledaj_opremu') }}" class="card">
+        <a href="{{ url_for('equipment_bp.browse_category') }}" class="card">
           <img src="{{ url_for('static', filename='images/assets.png') }}" alt="Available Assets" />
           <div>
             <h3>AVAILABLE ASSETS</h3>
