--- a/App/templates/browse/browse_equipment.html
+++ b/App/templates/browse/browse_equipment.html
@@ -13,9 +13,9 @@
 
 {{ macros.search_bar(url_for('equipment_bp.browse_equipment'), search) }}
 
-{% if search %}
+<!-- {% if search %}
     <p>Rezultati pretrage za: <strong>{{ search }}</strong></p>
-{% endif %}
+{% endif %} -->
 
 <table>
     <thead>
