--- a/App/templates/browse/equipment_info.html
+++ b/App/templates/browse/equipment_info.html
@@ -65,9 +65,7 @@
             <tr><th>Servisni period:</th><td>{{ equipment.service_period }}</td></tr>
             <tr><th>Sljedeci servis:</th><td>{{ equipment.next_service }}</td></tr>
             <tr><th>Sredstvo duži:</th><td>{{ equipment.labaratory_assistant }}</td></tr>
-            <tr><th>Sredstvo izdaje:</th><td>{{ equipment.professor }}</td></tr>
             <tr><th>Lokacija sredstva:</th><td>{{ equipment.location }}</td></tr>
-            <tr><th>Kategorija:</th><td>{{ equipment.category }}</td></tr>
             <tr><th>Napomena:</th><td>{{ equipment.note }}</td></tr>
         {% else %}
             <tr><th>Serijski broj:</th><td>{{ equipment.serial_number }}</td></tr>
@@ -78,6 +76,18 @@
         {% endif %}
     </tbody>
 </table>
+
+
+{% if user_role in ['admin', 'laborant'] %}
+<div class="action-buttons" style="margin-bottom: 1rem;">
+  <a href="{{ url_for('equipment_bp.print_equipment', id=equipment.id) }}" target="_blank">
+    <button>🖨️ Print</button>
+  </a>
+  <a href="{{ url_for('equipment_bp.pdf', id=equipment.id) }}" target="_blank">
+    <button>⬇️ Download PDF</button>
+  </a>
+</div>
+{% endif %}
 
 
 
