--- a/App/templates/browse/equipment_info.html
+++ b/App/templates/browse/equipment_info.html
@@ -63,7 +63,7 @@
 
 <table class="table">
     <tbody>
-        {% if user_role in ['admin', 'laborant'] %}
+        {% if user_role in ['admin', 'laborant', 'professor'] %}
             <tr><th>Inventurni broj:</th><td>{{ equipment.inventory_number }}</td></tr>
             <tr><th>Opis:</th><td>{{ equipment.description }}</td></tr>
             <tr><th>Serijski broj:</th><td>{{ equipment.serial_number }}</td></tr>
@@ -76,9 +76,9 @@
             <tr><th>Servisni period:</th><td>{{ equipment.service_period }}</td></tr>
             <tr><th>Sljedeci servis:</th><td>{{ equipment.next_service }}</td></tr>
             <tr><th>Sredstvo duži:</th><td>{{ equipment.labaratory_assistant }}</td></tr>
-            <tr><th>Sredstvo izdaje:</th><td>{{ equipment.professor }}</td></tr>
+            <!-- <tr><th>Sredstvo izdaje:</th><td>{{ equipment.professor }}</td></tr> -->
             <tr><th>Lokacija sredstva:</th><td>{{ equipment.location }}</td></tr>
-            <tr><th>Kategorija:</th><td>{{ equipment.category }}</td></tr>
+            <!-- <tr><th>Kategorija:</th><td>{{ equipment.category }}</td></tr> -->
             <tr><th>Napomena:</th><td>{{ equipment.note }}</td></tr>
         {% else %}
             <tr><th>Serijski broj:</th><td>{{ equipment.serial_number }}</td></tr>
