--- a/App/templates/browse/equipment_info.html
+++ b/App/templates/browse/equipment_info.html
@@ -94,12 +94,12 @@
 
 
 <script>
-    const images = {{ equipment.images | map(attribute='filename') | list | tojson | safe }};
+    const slike = {{ equipment.images | map(attribute='filename') | list | tojson | safe }};
     let index = 0;
 
     function showPopup(idx) {
         index = idx;
-        document.getElementById("popupImage").src = "/static/equipment_images/" + images[index];
+        document.getElementById("popupImage").src = "/static/equipment_images/" + slike[index];
         document.getElementById("popup").style.display = "flex";
     }
 
@@ -108,13 +108,13 @@
     }
 
     function nextImage() {
-        index = (index + 1) % images.length;
-        document.getElementById("popupImage").src = "/static/equipment_images/" + images[index];
+        index = (index + 1) % slike.length;
+        document.getElementById("popupImage").src = "/static/equipment_images/" + slike[index];
     }
 
     function prevImage() {
-        index = (index - 1 + images.length) % images.length;
-        document.getElementById("popupImage").src = "/static/equipment_images/" + images[index];
+        index = (index - 1 + slike.length) % slike.length;
+        document.getElementById("popupImage").src = "/static/equipment_images/" + slike[index];
     }
 </script>
 
